🐛 Fix overflow on body

--- a/packages/components/src/styles/blocks/playground.scss
+++ b/packages/components/src/styles/blocks/playground.scss
@@ -3,6 +3,7 @@
 
 .playground {
 	// @include layout-app();
+	@include cover();
 	position: relative;
 }
 
